syntax = "proto3";
package blog;
import "google/api/annotations.proto";

option go_package = "blog/blogpb;blogpb";

message Blog{
    string id =1;
    string author_id =2;
    string title =3;
    string content=4;
}
message CreateBlogRequest{
    Blog blog=1;
}

message CreateBlogResponse{
    Blog blog=2;
}
message ReadBlogRequest{
    string blog_id = 1;
}
message ReadBlogResponse{
    Blog blog = 1;
}

message UpdateBlogRequest{
    Blog blog = 1;
}
message UpdateBlogResponse{
    Blog blog = 1;
}

message DeleteBlogRequest{
    string blog_id = 1;
}
message DeleteBlogResponse{
    string blog_id = 1;
}
message ListBlogRequest{
    
}
message ListBlogResponse{
    Blog blog = 1;
}
service BlogService{
    rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse);
    rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse);//RETURN BLOG_NOT_FOUND if a blog with 
    //a specified ID does not exist
    rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse);//RETURN BLOG_NOT_FOUND if a blog with 
    //a specified ID does not exist
    rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse);
    rpc ListBlog (ListBlogRequest) returns (stream ListBlogResponse){
        option (google.api.http) = {
            get: "/v1/samblog/list"
        };
    }
    

}


